--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.16",
     "axios-mock-adapter": "^1.22.0",
     "postcss": "^8.4.31",
+    "shx": "^0.3.4",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.11"
   }
