--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-vue": "^4.4.0",
     "autoprefixer": "^10.4.16",
     "axios-mock-adapter": "^1.22.0",
+    "daisyui": "^4.6.1",
     "postcss": "^8.4.31",
     "shx": "^0.3.4",
     "tailwindcss": "^3.3.5",
