--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@vuepic/vue-datepicker": "^7.2.2",
     "axios": "^1.6.1",
+    "countup.js": "^2.8.0",
+    "odometer_countup": "^1.0.4",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-clipboard3": "^2.0.0",
