--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-clipboard3": "^2.0.0",
+    "vue-draggable-resizable": "^3.0.0",
     "vue-i18n": "^9.8.0",
     "vue3-clipboard": "^1.0.0",
     "vue3-datepicker": "^0.4.0"
